// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwingsView ignores vehicles without run ID (for linking to VPP) 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-swings-view__table-container"
  >
    <table
      className="m-swings-view__table"
    >
      <thead
        className="m-swings-view__table-header"
      >
        <tr>
          <th
            className="m-swings-view__table-header-cell"
          >
            <div>
              Swing On
              <div
                className="m-swings-view__table-header-cell-subheaders"
              >
                <div
                  className="m-swings-view__table-header-cell-subheader"
                >
                  Time
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-on"
          >
            Swing On
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-off"
          >
            Swing Off
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
              <div
                className="m-swings-view__table-header-cell-route-subheader"
              >
                Route
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell"
          >
            Vehicle
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            className="m-swings-view__show-past m-swings-view__show-past-disabled"
            colSpan={4}
            onClick={[Function]}
          >
            <span
              className="m-swings-view__show-past-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg/>",
                }
              }
            />
            Show past swings
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-inactive"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              5:16 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              789
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              456
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 1
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              v1-label
            </div>
          </th>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SwingsView includes swings less than 15 minutes in the past 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-swings-view__table-container"
  >
    <table
      className="m-swings-view__table"
    >
      <thead
        className="m-swings-view__table-header"
      >
        <tr>
          <th
            className="m-swings-view__table-header-cell"
          >
            <div>
              Swing On
              <div
                className="m-swings-view__table-header-cell-subheaders"
              >
                <div
                  className="m-swings-view__table-header-cell-subheader"
                >
                  Time
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-on"
          >
            Swing On
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-off"
          >
            Swing Off
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
              <div
                className="m-swings-view__table-header-cell-route-subheader"
              >
                Route
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell"
          >
            Vehicle
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            className="m-swings-view__show-past m-swings-view__show-past-disabled"
            colSpan={4}
            onClick={[Function]}
          >
            <span
              className="m-swings-view__show-past-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg/>",
                }
              }
            />
            Show past swings
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-inactive"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              4:45 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              789
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              456
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 1
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            />
          </th>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SwingsView links to both swing-on and swing-off if both are active 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-swings-view__table-container"
  >
    <table
      className="m-swings-view__table"
    >
      <thead
        className="m-swings-view__table-header"
      >
        <tr>
          <th
            className="m-swings-view__table-header-cell"
          >
            <div>
              Swing On
              <div
                className="m-swings-view__table-header-cell-subheaders"
              >
                <div
                  className="m-swings-view__table-header-cell-subheader"
                >
                  Time
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-on"
          >
            Swing On
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-off"
          >
            Swing Off
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
              <div
                className="m-swings-view__table-header-cell-route-subheader"
              >
                Route
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell"
          >
            Vehicle
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            className="m-swings-view__show-past m-swings-view__show-past-disabled"
            colSpan={4}
            onClick={[Function]}
          >
            <span
              className="m-swings-view__show-past-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg/>",
                }
              }
            />
            Show past swings
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-active"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              5:16 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              <span
                className="m-swings-view__run-icon m-swings-view__run-icon-arrow"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg/>",
                  }
                }
              />
              <button
                onClick={[Function]}
              >
                789
              </button>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              <span
                className="m-swings-view__run-icon m-swings-view__run-icon-arrow"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg/>",
                  }
                }
              />
              <button
                onClick={[Function]}
              >
                456
              </button>
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 1
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              v1-label
            </div>
          </th>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SwingsView omits swings more than 15 minutes in the past 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-swings-view__table-container"
  >
    <table
      className="m-swings-view__table"
    >
      <thead
        className="m-swings-view__table-header"
      >
        <tr>
          <th
            className="m-swings-view__table-header-cell"
          >
            <div>
              Swing On
              <div
                className="m-swings-view__table-header-cell-subheaders"
              >
                <div
                  className="m-swings-view__table-header-cell-subheader"
                >
                  Time
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-on"
          >
            Swing On
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-off"
          >
            Swing Off
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
              <div
                className="m-swings-view__table-header-cell-route-subheader"
              >
                Route
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell"
          >
            Vehicle
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            className="m-swings-view__show-past m-swings-view__show-past-disabled"
            colSpan={4}
            onClick={[Function]}
          >
            <span
              className="m-swings-view__show-past-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg/>",
                }
              }
            />
            Show past swings
          </th>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SwingsView renders future swings, active and inactive 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  <div
    className="m-swings-view__table-container"
  >
    <table
      className="m-swings-view__table"
    >
      <thead
        className="m-swings-view__table-header"
      >
        <tr>
          <th
            className="m-swings-view__table-header-cell"
          >
            <div>
              Swing On
              <div
                className="m-swings-view__table-header-cell-subheaders"
              >
                <div
                  className="m-swings-view__table-header-cell-subheader"
                >
                  Time
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-on"
          >
            Swing On
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell m-swings-view__table-header-cell-swing-off"
          >
            Swing Off
            <div
              className="m-swings-view__table-header-cell-subheaders"
            >
              <div
                className="m-swings-view__table-header-cell-subheader"
              >
                Run
              </div>
              <div
                className="m-swings-view__table-header-cell-route-subheader"
              >
                Route
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-header-cell"
          >
            Vehicle
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            className="m-swings-view__show-past m-swings-view__show-past-disabled"
            colSpan={4}
            onClick={[Function]}
          >
            <span
              className="m-swings-view__show-past-icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg/>",
                }
              }
            />
            Show past swings
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-active"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              5:16 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              789
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              <span
                className="m-swings-view__run-icon m-swings-view__run-icon-arrow"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg/>",
                  }
                }
              />
              <button
                onClick={[Function]}
              >
                456
              </button>
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 1
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              v1-label
            </div>
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-active"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              5:33 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              789
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              <span
                className="m-swings-view__run-icon m-swings-view__run-icon-ghost"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg/>",
                  }
                }
              />
              <button
                onClick={[Function]}
              >
                456
              </button>
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 3
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            />
          </th>
        </tr>
        <tr
          className="m-swings-view__table-row-inactive"
        >
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              5:50 AM
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              789
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            >
              456
              <div
                className="m-swings-view__route-pill"
              >
                <div
                  className="m-swings-view__route"
                >
                  Name 3
                </div>
              </div>
            </div>
          </th>
          <th
            className="m-swings-view__table-cell"
          >
            <div
              className="m-swings-view__table-cell-contents"
            />
          </th>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`SwingsView renders loading message 1`] = `
<div
  className="m-swings-view "
  id="m-swings-view"
>
  <div
    className="m-view-header"
  >
    <h2
      className="m-view-header__title"
    >
      Swings
    </h2>
    <button
      aria-label="Close"
      className="m-close-button m-close-button--x-large m-close-button--light"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        aria-label=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg/>",
          }
        }
        role="img"
      />
    </button>
  </div>
  loading...
</div>
`;
